--- a/style.css
+++ b/style.css
@@ -64,10 +64,14 @@
    }
 
    .image{
-       width: 60px;
+       width: 55px;
    }
    #vn{
        margin-left: 637px;
+   }
+
+   .above-logo{
+    position: absolute;
    }
 
   
